[gd_scene load_steps=9 format=2]

[ext_resource path="res://Temporary Clipart/generic-rpg-ui-text-box.png" type="Texture" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Temporary Clipart/gertrude copy.png" type="Texture" id=3]
[ext_resource path="res://Temporary Clipart/next-indicator.png" type="Texture" id=4]
[ext_resource path="res://DialogueBox2.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 150.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 112, 32 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 930, 60 ), Vector2( 930, 65 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 930, 34 ) ]
}

[node name="DialogueBox" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Content" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_vertical = 0
rect_min_size = Vector2( 29, 42 )
custom_colors/font_color = Color( 0.196078, 0.133333, 0.180392, 1 )
custom_constants/line_spacing = 2
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Go find a piece of cloth!
(Use arrow keys to navigate the house)"
autowrap = true
max_lines_visible = 2

[node name="Avatar" type="TextureRect" parent="Content"]
margin_top = -35.0
margin_right = 130.0
margin_bottom = 93.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="NextIndicator" type="TextureRect" parent="Content"]
margin_left = 930.0
margin_top = 34.0
margin_right = 995.0
margin_bottom = 81.0071
texture = ExtResource( 4 )
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Content/NextIndicator"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Tween" type="Tween" parent="Content"]

[connection signal="visibility_changed" from="Content" to="." method="_on_Content_visibility_changed"]
[connection signal="tween_all_completed" from="Content/Tween" to="." method="_on_Tween_tween_all_completed"]
